# pgmigrate

./: .gitignore  LICENSE  README.md  pyproject.toml
pgmigrate/: db.py  files.py  logging.py  main.py  model.py
src/pgmigrate/: db.py  files.py  main.py  model.py
tests/mockups/: test.yml
